Mac: Use a "less" private API for keeping traffic lights lit while bubbles are showing

The approach: Rather than overriding -[NSWindow _sharesParentKeyState]
on the child, override -[NSWindow hasKeyAppearance] on the parent.  This
is used, e.g., by WebKit since http://wkrev.com/164173. It doesn't have
an underscore on the front which I guess is nice.

After this, we should be able to phase out the overrides of the slightly
"more" private API -_sharesParentKeyState. info_bubble_window.mm still
uses this, and it causes a lot of complex interactions with hotkeys and
dialog dismissal. Leave this for a follow-up since it will be tricky to
ensure there are no regressions while unwinding the existing workarounds
for _sharesParentKeyState weirdness.

This would also give a nice way to keep traffic lights lit when WebModal
dialogs are showing. This isn't currently done, and would make their
behaviour more consistent with native sheets. However, WebModals are
actually *grand*-children of the Cocoa browser window and have other
complications. Leave that for a follow-up as well.

BUG=602846, 603881

Review-Url: https://codereview.chromium.org/1955343002
Cr-Commit-Position: refs/heads/master@{#392448}

Former-commit-id: 1b0d712e570d6800634910954d6a6690b1ae5d17